added some images to repo\n also cleaned up the look by changing back ground to plain color and changed the bouncy pic

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ and open the template in the editor.
 
 	<style type="text/css">
 		body{
-            background-color:#A9A9A9;
-            background-image: url('images/1.jpg');
+            background-color:#2B2B2B;
+            //background-image: url('images/1.jpg');
         } 
 
 	</style>
@@ -54,7 +54,7 @@ and open the template in the editor.
         <!--headder-->
         <div class="floating" >
             <a class="navbar-brand" href="index.html">
-                <img alt="Brand" class="img-circle" src="images/anish.jpg">
+                <img alt="Brand" class="img-circle" src="images/anish_!.jpg">
             </a>
         </div>
         <div id="fill" ></div>
