fixed UI odd spacing error\n fixed work-ex centering error

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ and open the template in the editor.
                 </div>
             	<i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
             	<div style=" width: 95%;">
-	            	<div class="media" style="background-color: #ccc; border-radius:10px; ">
+	            	<div class="media" style="background-color: #ccc; border-radius:10px; margin-left: 2.5%; margin-right: -2.5%;">
 					  	<div class="media-left media-middle" style="padding-left: 5pt;">
 					    	<a href="#">
 					      		<img class="media-object" tyle="padding-left: 5pt;" src="images/75health_logo.png" >
@@ -220,7 +220,7 @@ and open the template in the editor.
 					  	</div>
 					</div>
 					<div style="height: 5pt;"></div>
-					<div class="media" style="background-color: #ccc; border-radius:10px; ">
+					<div class="media" style="background-color: #ccc; border-radius:10px; margin-left: 2.5%; margin-right: -2.5%;">
 					  	<div class="media-left media-middle" style="padding-left: 5pt;">
 					    	<a href="#">
 					      		<img class="media-object"  src="images/sfsu_logo.png" >
@@ -238,7 +238,7 @@ and open the template in the editor.
 					  	</div>
 					</div>
 					<div style="height: 5pt;" ></div>
-					<div class="media" style="background-color: #ccc; border-radius:10px;">
+					<div class="media" style="background-color: #ccc; border-radius:10px; margin-left: 2.5%; margin-right: -2.5%;">
 					  	<div class="media-left media-middle" style="padding-left: 5pt;">
 					    	<a href="#">
 					      		<img class="media-object"  src="images/kaaspro_logo.png" >
@@ -255,7 +255,7 @@ and open the template in the editor.
 					  	</div>
 					</div>
 					<div style="height: 5pt;"></div>
-					<div class="media" style="background-color: #ccc; border-radius:10px;">
+					<div class="media" style="background-color: #ccc; border-radius:10px; margin-left: 2.5%; margin-right: -2.5%;">
 					  	<div class="media-left media-middle" style="padding-left: 5pt;">
 					    	<a href="#">
 					      		<img class="media-object"  src="images/kaaspro_logo.png" >
@@ -416,7 +416,6 @@ and open the template in the editor.
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<h4 class="media-left media-heading" style="float: left; padding-left: 5pt;">
@@ -445,27 +444,24 @@ and open the template in the editor.
 
         <div id="Honors" class="modal">
             <!-- body-->
-            <div align="center" style="width: 75%; background-color: #e9ebee;" class="modal-content" >
+            <div style="width: 75%; background-color: #e9ebee;" class="modal-content" >
                 <div style="height:40pt;" align="center">
                 	<h2>Honors and Rewards</h2>
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<h4 class="media-left media-heading" style="float: left; padding-left: 5pt;">
-					    		Won 3rd place 
+					    		Rewarded 3rd place at COSE Showcase
 					    	</h4>
 					    	<h4 class="media-right media-heading" style="float: right; padding-right: 5pt;">
 					    		May. 2016
 					    	</h4>
-					    	<h4 class="media-left media-heading">
-					    		Undergraduate Physical Science Division Group 1
-					    	</h4>
 							<br>
-					    	<p align="left" >
-					    		My groups' user-friendly automated aquarium for novice fish lovers, which would help maintain an aquarium with very little time and effort. Won 3rd place in College of Science and Enginering 2016 project Showcase.
+                            <br>
+					    	<p >
+					    		My groups' user-friendly automated aquarium for novice fish lovers, which would help maintain an aquarium with very little time and effort.
 					    	</p>
 					  	</div>
 					</div>
@@ -483,7 +479,6 @@ and open the template in the editor.
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
@@ -508,7 +503,6 @@ and open the template in the editor.
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
@@ -536,7 +530,6 @@ and open the template in the editor.
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 							<br>
@@ -561,7 +554,6 @@ and open the template in the editor.
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
@@ -586,7 +578,6 @@ and open the template in the editor.
                 </div>
                 <i class="material-icons close bg-danger" style="font-size:25pt; color:red">cancel</i>
                 <div style="width: 95%;">
-                	<div style="height: 5pt;"></div>
 					<div class="media" style="background-color: #ccc; border-radius:10px;">
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
