grammer corecetion and vitual transparency fix for h1 and h3

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ and open the template in the editor.
                         <img id="myImg" src="images/src.png" >
                         <div style="position: absolute; top:76pt; width: 180pt;">
                             <h1>
-                                Scrambler
+                                Cryptography
                             </h1>
                         </div>
                     </div>
@@ -296,9 +296,9 @@ and open the template in the editor.
 					    	<br>
 					    	<br>
 					    	<p align="left">
-						    	Our mission was to Provide a novice user-friendly system, which would contain the necessary information, to help maintain the aquarium with little time and effort.
+						    	&nbsp;Our mission was to Provide a novice user-friendly system, which would contain the necessary information, to help maintain the aquarium with little time and effort.
 
-								I was responsible to design, test and implement software for some parts of the full stack system. Also worked with the hardware driver code so that the hardware could be interfaced with our main program.<br>
+								&nbsp;I was responsible for designing, test and implement software for some parts of the full stack system. Also worked with the hardware driver, which helped the device to interface with our front-end program.<br>
 								<a href="https://sites.google.com/site/ezaquariumsfsu">
 									Click Here for Project website
 								</a><br>
@@ -320,9 +320,9 @@ and open the template in the editor.
 					    	<br>
 					    	<br>
 					    	<p align="left" >
-						    	Our team was to develop a restaurant reservation website for our CSC 648 class with pre-set constraints by our professor. 
+						    	&nbsp;Our team was to develop a restaurant reservation website for our CSC 648 class with pre-set constraints by our professor. 
 
-								I was the front-end lead in the team and had to make design decisions and allocating frontend work. Also, was responsible for making decisions for usage of API and Frameworks within the set constraints. Final, did some coding, testing, and bug fixing.<br>
+								&nbsp;I was the front-end lead in the team and had to make design decisions and allocating frontend work. Also, was responsible for making decisions for usage of API and Frameworks within the set constraints. Final, did some coding, testing, and bug fixing.<br>
 								<a href="https://github.com/anish1992/csc-648">
 									Click Here for github link
 								</a>
@@ -341,9 +341,9 @@ and open the template in the editor.
 					    	<br>
 					    	<br>
 					    	<p align="left" >
-					    		For ENGR 478 Design with Microprocessor Controlling class, we made a LED cube using a TI launch pad. We made a  cube with transistors which were controlled by ports on a TI launch pad (ARM based microcontroller). We programed ports on the TI launch pad by varying voltage output using assembly C language.
+					    		&nbsp;For ENGR 478 Design with Microprocessor Controlling class, we made a LED cube using a TI Launchpad. We made a  cube with transistors which were controlled by ports on a TI Launchpad (ARM based microcontroller). We programmed ports on the TI launch pad by varying voltage output using assembly C language.
 
-								Worked with group to program the different patterns and a system that would reduce the instruction set using assembly C language on a TI launch pad.
+								&nbsp;Worked with a group to program the different patterns and a system that would reduce the instruction set using assembly C language on a TI Launchpad.
 					    	</p>
 					  	</div>
 					</div>
@@ -359,9 +359,9 @@ and open the template in the editor.
 					    	<br>
 					    	<br>
 					    	<p align="left" >
-						    	For ENGR 478 Design with Microprocessor Controlling class, we made a quadcopter using a TI launch pad. We made a quadcopter with standard parts and driver which were controlled by ports on a TI launch pad (ARM based microcontroller). We programed ports on the TI launch pad by varying voltage output using assembly C language.
+						    	&nbsp;For ENGR 478 Design with Microprocessor Controlling class, we made a quadcopter using a TI Launchpad. We made a quadcopter with standard parts and driver which the TI Launchpad (ARM based microcontroller) controlled. We programmed ports on the TI Launchpad by varying voltage output using assembly C language.
 
-								Worked with group to program the output behavior of a quadcopter.  Varied controls using assembly C language on a TI launch pad.
+								&nbsp;Worked with the group to program the output behavior of a quadcopter.  Varied controls using assembly C language on a TI Launchpad.
 					    	</p>
 					  	</div>
 					</div>
@@ -377,9 +377,9 @@ and open the template in the editor.
 					    	<br>
 					    	<br>
 					    	<p align="left" >
-						    	Wrote a C++ and java program, which manipulates text file using iostream and system commands, to  scramble the text of the file based on a passphrase set by the user. Once the text is scrambled, it could only be descrambled by the passphrase that the user set. There's also a Java GUI that would run the scrambler.
+						    	&nbsp;Wrote a C++ and Java program, which manipulates text file using iostream and system commands, to scramble the text of the text file depending on a passphrase set by the user. The text file could only descramble with the passphrase, which the user had set. There's also a Java GUI that would run the scrambler.
 
-								This project was a pet project that I did because after my CSC 340 class I wanted to explore more with system commands c++ and java. Then, I ended up making iterative updates and using it on my computer.<br>
+								&nbsp;This project was a pet project that I did because after my CSC 340 class I wanted to explore more with system commands c++ and java. Then, I ended up making iterative updates and using it on my computer.<br>
 							<a href="https://github.com/anish1992/progrmaing-Archive/tree/master/ende">
 								Click Here for github link
 							</a>
@@ -461,7 +461,7 @@ and open the template in the editor.
 							<br>
                             <br>
 					    	<p >
-					    		My groups' user-friendly automated aquarium for novice fish lovers, which would help maintain an aquarium with very little time and effort.
+					    		&nbsp;My groups' user-friendly automated aquarium for novice fish lovers, which would help maintain an aquarium with very little time and effort.
 					    	</p>
 					  	</div>
 					</div>
@@ -483,8 +483,9 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
 					    	<p align="left" >
-					    		<p><i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i>
-                				Deplyment not compleat<i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i></p>
+					    		<h2>
+					    			Coming Soon
+					    		</h2>
 					    	</p>
 					    	<br>
 					  	</div>
@@ -507,9 +508,9 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
 					    	<p align="left" >
-					    		I am currently pursuing, B.S. at San Francisco State University with a major in computer engineering and a minor in computer science and expected to graduate December 23, 2016. I have done some interesting projects while in San Francisco State upload to my GitHub page.<br><br>
+					    		&nbsp;I am currently pursuing, B.S. at San Francisco State University with a major in computer engineering and a minor in computer science and expected to graduate December 23, 2016. I have done some exciting projects while at San Francisco State upload to my GitHub page.<br><br>
 
-								I'm currently looking to find a job after graduating to have a chance to prove myself and improve my existing skills through work experience.
+								&nbsp;I'm currently looking to find a job after graduating to have a chance to prove myself and improve my existing skills through work experience.
 					    	</p>
 					    	<br>
 					  	</div>
@@ -534,8 +535,9 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 							<br>
 					    	<p align="left" >
-					    		<p><i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i>
-                				Deplyment not compleat<i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i></p>
+					    		<h2>
+					    			Coming Soon
+					    		</h2>
 					    	</p>
 					    	<br>
 					  	</div>
@@ -558,8 +560,9 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
 					    	<p align="left" >
-					    		<p><i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i>
-                				Deplyment not compleat<i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i></p>
+					    		<h2>
+					    			Coming Soon
+					    		</h2>
 					    	</p>
 					    	<br>
 					  	</div>
@@ -582,8 +585,9 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
 					    	<p align="left" >
-					    		<p><i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i>
-                				Deplyment not compleat<i class="fa fa-exclamation-triangle" style="font-size:48px;color:red"></i></p>
+					    		<h2>
+					    			Coming Soon
+					    		</h2>
 					    	</p>
 					    	<br>
 					  	</div>
