added about me to the website

--- a/index.html
+++ b/index.html
@@ -508,9 +508,7 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
 					    	<p align="left" >
-					    		&nbsp;I am currently pursuing, B.S. at San Francisco State University with a major in computer engineering and a minor in computer science and expected to graduate December 23, 2016. I have done some exciting projects while at San Francisco State upload to my GitHub page.<br><br>
-
-								&nbsp;I'm currently looking to find a job after graduating to have a chance to prove myself and improve my existing skills through work experience.
+                                &nbsp;I am looking for a job role that would let me express the skills I learned in front-end and back-end. Also, help me learn new skills and explore new interests.
 					    	</p>
 					    	<br>
 					  	</div>
@@ -585,9 +583,9 @@ and open the template in the editor.
 					  	<div class="media-body" style="padding-top: 5pt;">
 					    	<br>
 					    	<p align="left" >
-					    		<h2>
-					    			Coming Soon
-					    		</h2>
+					    		&nbsp;I am currently pursuing, B.S. at San Francisco State University with a major in computer engineering and a minor in computer science and expected to graduate December 23, 2016. I have done some exciting projects while at San Francisco State upload to my GitHub page.<br><br>
+
+                                &nbsp;I'm currently looking to find a job after graduating to have a chance to prove myself and improve my existing skills through work experience.
 					    	</p>
 					    	<br>
 					  	</div>
